# Widget_2

./: .gitignore  CMakeLists.txt  Counter.h  main.cpp  ui_view.h  view.cpp  view.h  view.ui
